Closed Bug 349025 Opened 18 years ago Closed 18 years ago

Extensions (add-ons) don't start up

Categories

(Toolkit :: Add-ons Manager, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: ria.klaassen, Assigned: benjamin)

References

Details

(Keywords: regression)

Attachments

(1 file)

In the latest hourly extensions don't start up. Regression between 1.9a1_2006081706 and 1.9a1_2006081709: http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=2006-08-17+05%3A00&maxdate=2006-08-17+10%3A00
Severity: normal → major
workaround (weird) 1. Open Addons manager 2. select an extension 3. select uninstall 4. close Firefox 5. open Firefox and be happy, suddenly all extensions work again, including the one you tried to uninstall
Benjamin, do you know what is going on here? gAppData->flags is always 0 on startup so the EM is never called as well as migration.
ScopedAppData::ScopedAppData doesn't set or zero out flags so NS_XRE_ENABLE_PROFILE_MIGRATOR | NS_XRE_ENABLE_EXTENSION_MANAGER is never set.
Blocks: 319843
*** Bug 349123 has been marked as a duplicate of this bug. ***
Summary: Extensions don't start up → Extensions (add-ons) don't start up
Attached patch DuhSplinter Review
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Fixed on trunk as obvious stupidity.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060818 Minefield/3.0a1 ID:2006081806 [cairo] verified/fixed for me
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: