Bug 349025 - Extensions don't start up, r=obvious stupidity